Fixed alignment for mermaid blocks.

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -86,7 +86,7 @@ strong {
 
 pre {
     width: 140%;
-    margin-left: -20%;
+    margin-left: -25%;
 }
 
 section img {
